2019-02-05  Marc A. Smith  <marc.smith@quantum.com>

	in the generated chroot_build.sh script, we need to capture the exit status of the chroot command and exit the script using that value to catch build errors, otherwise we exit with the status from 'make post_chroot'; added build dep to Python.chroot (at least one third-party module requires libuuid)

2019-02-04  Marc A. Smith  <marc.smith@quantum.com>

	rc.rpcagent SSL key length fix (the real fix, thanks Lars)

	added a header/footer echo line to all package targets so output is easier to parse

	fix ssl_dh_key_size variable find/replace

	fixes for rpc_agent build option, added Python deepdiff module, several other build tweaks/fixes

2019-02-03  Marc A. Smith  <marc.smith@quantum.com>

	added a symlink for 'esos.img' used by custom build bits; added --with-ssh_auth_key=FILE autoconf option; updated naming variable in TUI and strings in aboutDialog()

	Merge branch '20190201'

	fixed missing line in autoconf script; fixed typos in rc.network and adjust auto-DHCP link-up delay

	started moving product name strings into the Makefile -- needs more work to control all name strings from one config option; updated rc.network to handle the auto-DHCP feature -- needs testing

2019-02-02  Marc A. Smith  <marc.smith@quantum.com>

	include downloading the iozone3 package; implement no TUI EULA prompt; implement /var/state/esos/ directory for build option control; autoconf script updates

	use the original "esos" package name (prefix)

	updated Makefile.in to accomodate for new updates in autoconf script

2019-02-01  Marc A. Smith  <marc.smith@quantum.com>
